# fool3

./: .fool_history  LICENSE  README.md  base.fool  base.fool.hs  base1.fool  build  fool.cabal  language-examples.md  prog1.fool.hs  stack.yaml  test.fool  test1.fool
app/: Main.hs
doc/: BaseHaskellTypeclasses.hs  FromScratch (aantich-ubuntu's conflicted copy 2017-10-11).hs  FromScratch.hs  LambdaBasedSyntax.hs  Pseudocode.hs  README.md  RTS.md  Syntax.md  YetAnotherFromScratch.hs
doc/base/: README.md  base.hs  program1.hs
doc/library-attempts/: Base.hs
docs/: README.md
fool/:  (Antons-MacBook-Pro.local's conflicted copy 2019-02-11).fool_history  .fool_history  CHANGELOG.md  ISSUES.md  LICENSE  README.md  base-full.fool  base.all.fool  base.fool  base.fool.hs  fool.cabal  package.yaml  parsertests.fool  program1.cs  run  test1.fool
fool/app/: Main.hs
fool/doc/: CurrentImplementation.md  NewFromScratch.hs  Pseudocode.hs  base.lambda.hs
fool/jadt/: gadt.js
fool/rts/: Makefile
fool/rts-net/: notes.md
fool/src/: CLM.hs  Core.hs  Interpreter.hs  Lexer.hs  Logs.hs  Parser.hs  Pipeline.hs  State.hs  Surface.hs  TermColors.hs
fool/src/DotNet/: Tuples.hs  (+3 more)
hsdotnet/: .gitignore  ChangeLog.md  Example.hs  README.md  package.yaml  run  runPlugin
hsdotnet/app/: Main.hs
hsdotnet/baselib/: README.md
hsdotnet/src/: CSharpGen.hs  Compiler.hs  CompilerText.hs  OLDCompilerText.hs  Plugin.hs
jadt/: README.md  gadt.js
lambda/: .fool_history  .gitignore  README.md  Thask.md  base.lambda.hs  package.yaml  run
lambda.old/: OLDbase.lambda.hs  README.md  base.thask.hs  package.yaml
lambda.old/test/: Spec.hs
lambda/app/: Main.hs
lambda/doc/: AnotherFromScratch.hs
lambda/src/: Environment.hs  Logs.hs  State.hs  TermColors.hs
lambda/test/: Spec.hs
rts/: Makefile
rts-net/FOOLRTS/: FOOLRTS.sln
rts/src/: rts.c
src/: Core.hs  Interpreter.hs  Lexer.hs  Parser.hs  State.hs  Syntax.hs  TermColors.hs  Typesystem.hs  Typesystem2.hs
src/DependentTypes/: Core.hs  CoreParser.hs  Eval.hs  StrictEval.hs
src/DotNet/: Parser.hs  Syntax.hs  Translator.hs  notes.md
(+84 files in other folders)
