name:                fool
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jhoxray/fool#readme
license:             BSD3
license-file:        LICENSE
author:              J X-Ray Ho
maintainer:          jho.xray@gmail.com
copyright:           Copyright: (c) 2016 J X-Ray Ho
category:            languages
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lexer
                     , Syntax
                     , Parser
                     , Interpreter
                     , TermColors
                     , DependentTypes.Core
                     , DependentTypes.Eval
                     , DependentTypes.StrictEval
                     , DependentTypes.CoreParser
                     , DotNet.Translator
                     , DotNet.Syntax
                     , State
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , vector
                     , hashtables
                     , text
                     , directory
                     , transformers                  
  default-language:    Haskell2010

executable fool-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fool
                     , mtl
                     , haskeline
                     , directory
                     , transformers
  default-language:    Haskell2010

test-suite fool-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fool
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jhoxray/fool
